feat(auth): implement grpc and http adapters, move service deps
